--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
+    "sweetalert": "^2.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue-toast-notification": "^0.6.0"
