--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "sweetalert": "^2.1.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.0-rc.3",
     "vue-toast-notification": "^0.6.0"
   },
   "devDependencies": {
